tests/fails/f18.t

terra foo()
    return nil + 1 
end
foo()